# operator-repo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yml  tox.yaml
src/operator_repo/: __init__.py  classes.py  cli.py  core.py  exceptions.py  utils.py
src/operator_repo/checks/: __init__.py  bundle.py  catalog.py  operator.py
tests/: __init__.py  conftest.py  test_bundle.py  test_catalog.py  test_cli.py  test_operator.py  test_operator_catalog.py  test_repo.py  test_utils.py
tests/checks/: test_bundle.py  test_catalog.py  test_checks.py  test_operator.py
