[project]
name = "operator-repo"
version = "0.4.1"
description = "Library and utilities to handle repositories of kubernetes operators"
authors = [
    {name = "Maurizio Porrato", email = "mporrato@redhat.com"},
]
dependencies = [
    "pyyaml>=6.0.1",
    "semver>=3.0.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.scripts]
optool = "operator_repo.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "tox-pdm>=0.6.1",
    "tox-gh-actions>=3.1.3",
]
lint = [
    "black>=23.3.0",
    "isort>=5.11.5",
    "pylint>=2.13.9",
    "types-PyYAML>=6.0.12.11",
    "mypy>=1.5.1",
    "bandit[toml]>=1.7.5",
    "tox-pdm>=0.6.1",
    "autoflake>=2.2.0",
]

[tool.isort]
profile = "black"

[tool.pylint.main]
ignore-patterns = ["^\\.#"]

[tool.pylint.basic]
no-docstring-rgx = "^(test)?_"

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "missing-module-docstring",
    "missing-function-docstring",
]
enable = ["c-extension-no-member"]

[tool.pylint.variables]
ignored-argument-names = "_.*|^ignored_|^unused_"

[tool.bandit]
exclude_dirs = ["tests", ".tox", ".venv"]

[tool.autoflake]
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
